force-app/main/default/objects/households__Household__c/households__Household__c.object-meta.xml
<CustomObject>
    <description>Relationship Group</description>
    <household>true</household>
    <label>Relationship Group</label>
    <nameField>
        <label>Relationship Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>