force-app/main/default/objects/households__Household__c/fields/households__Description__c.field-meta.xml
<CustomField>
    <fullName>households__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>