force-app/main/default/objects/households__Household__c/fields/households__PrimaryAccount__c.field-meta.xml
<CustomField>
    <fullName>households__PrimaryAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N30000001o2eKEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>