force-app/main/default/objects/households__Household__c/fields/households__SecondaryAccount__c.field-meta.xml
<CustomField>
    <fullName>households__SecondaryAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N30000001o2eLEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>