force-app/main/default/objects/households__Household__c/fields/households__TotalMembers__c.field-meta.xml
<CustomField>
    <fullName>households__TotalMembers__c</fullName>
    <label>Total Members</label>
    <summaryForeignKey>households__HouseholdMember__c.households__Household__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>