force-app/main/default/objects/households__Household__c/listViews/households__All.listView-meta.xml
<ListView>
    <fullName>households__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>